[gd_scene load_steps=7 format=3 uid="uid://m442tbb8h0q6"]

[ext_resource type="Script" path="res://Level.gd" id="1_0kbdd"]
[ext_resource type="PackedScene" uid="uid://d0fhj76mrqw3f" path="res://easy_street.tscn" id="2_0ljud"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_vp2vu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kn6eo"]
size = Vector2(1167, 20)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_3cqpp"]

[sub_resource type="LabelSettings" id="LabelSettings_uo31y"]
font_size = 50

[node name="Level" type="Node2D"]
script = ExtResource("1_0kbdd")

[node name="spawn_pos" type="Marker2D" parent="."]
position = Vector2(1252, 313)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="invisible_wall" type="StaticBody2D" parent="."]
position = Vector2(13, -9)
disable_mode = 1
collision_layer = 15
collision_mask = 15
physics_material_override = SubResource("PhysicsMaterial_vp2vu")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="invisible_wall"]
position = Vector2(573.5, 0)
shape = SubResource("RectangleShape2D_kn6eo")

[node name="invisible_wall2" type="StaticBody2D" parent="."]
position = Vector2(4, 655)
disable_mode = 1
collision_layer = 15
collision_mask = 15
physics_material_override = SubResource("PhysicsMaterial_3cqpp")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="invisible_wall2"]
position = Vector2(573.5, 0)
shape = SubResource("RectangleShape2D_kn6eo")

[node name="tick" type="Timer" parent="."]
autostart = true

[node name="Daryl" parent="." instance=ExtResource("2_0ljud")]
position = Vector2(599, 260)

[node name="ui" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="ui"]
offset_right = 235.0
offset_bottom = 69.0
text = "Score:0"
label_settings = SubResource("LabelSettings_uo31y")

[node name="score_timer" type="Timer" parent="."]

[node name="Until_run_out" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="tick" to="." method="_on_tick_timeout"]
[connection signal="timeout" from="score_timer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="Until_run_out" to="." method="_on_until_run_out_timeout"]
